@@ -1,19 +1,26 @@
 package com.github.saphyra.apphub.integration.backend.notebook;
 
 import com.github.saphyra.apphub.integration.action.backend.IndexPageActions;
-import com.github.saphyra.apphub.integration.action.backend.NotebookActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.CategoryActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.ChecklistActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.LinkActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.ListItemActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.TableActions;
+import com.github.saphyra.apphub.integration.action.backend.notebook.TextActions;
 import com.github.saphyra.apphub.integration.core.BackEndTest;
 import com.github.saphyra.apphub.integration.framework.ResponseValidator;
-import com.github.saphyra.apphub.integration.structure.api.notebook.ChecklistItemNodeRequest;
-import com.github.saphyra.apphub.integration.structure.api.notebook.ChecklistTableRowRequest;
+import com.github.saphyra.apphub.integration.structure.api.notebook.checklist.ChecklistItemModel;
+import com.github.saphyra.apphub.integration.structure.api.notebook.ColumnType;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateCategoryRequest;
-import com.github.saphyra.apphub.integration.structure.api.notebook.CreateChecklistItemRequest;
-import com.github.saphyra.apphub.integration.structure.api.notebook.CreateChecklistTableRequest;
+import com.github.saphyra.apphub.integration.structure.api.notebook.checklist.CreateChecklistRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateLinkRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateTableRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.CreateTextRequest;
 import com.github.saphyra.apphub.integration.structure.api.notebook.ListItemType;
 import com.github.saphyra.apphub.integration.structure.api.notebook.NotebookView;
+import com.github.saphyra.apphub.integration.structure.api.notebook.table.TableColumnModel;
+import com.github.saphyra.apphub.integration.structure.api.notebook.table.TableHeadModel;
+import com.github.saphyra.apphub.integration.structure.api.notebook.table.TableRowModel;
 import com.github.saphyra.apphub.integration.structure.api.user.RegistrationParameters;
 import io.restassured.response.Response;
 import org.testng.annotations.Test;
@@ -44,38 +51,58 @@ public class SearchListItemTest extends BackEndTest {
         RegistrationParameters userData = RegistrationParameters.validParameters();
         UUID accessTokenId = IndexPageActions.registerAndLogin(userData);
 
-        UUID categoryId = NotebookActions.createCategory(accessTokenId, CreateCategoryRequest.builder().title(CATEGORY_TITLE).build());
+        UUID categoryId = CategoryActions.createCategory(accessTokenId, CreateCategoryRequest.builder().title(CATEGORY_TITLE).build());
 
-        NotebookActions.createLink(accessTokenId, CreateLinkRequest.builder().title(LINK_TITLE).parent(categoryId).url(LINK_URL).build());
-        NotebookActions.createText(accessTokenId, CreateTextRequest.builder().title(TEXT_TITLE).content(TEXT_CONTENT).build());
-        NotebookActions.createChecklist(
+        LinkActions.createLink(accessTokenId, CreateLinkRequest.builder().title(LINK_TITLE).parent(categoryId).url(LINK_URL).build());
+        TextActions.createText(accessTokenId, CreateTextRequest.builder().title(TEXT_TITLE).content(TEXT_CONTENT).build());
+        ChecklistActions.createChecklist(
             accessTokenId,
-            CreateChecklistItemRequest.builder()
+            CreateChecklistRequest.builder()
                 .title(CHECKLIST_TITLE)
-                .nodes(Arrays.asList(ChecklistItemNodeRequest.builder()
-                    .order(0)
+                .items(Arrays.asList(ChecklistItemModel.builder()
+                    .index(0)
                     .checked(true)
                     .content(CHECKLIST_ITEM_CONTENT)
                     .build()))
                 .build()
         );
-        NotebookActions.createTable(
+        TableActions.createTable(
             accessTokenId,
             CreateTableRequest.builder()
                 .title(TABLE_TITLE)
-                .columnNames(Arrays.asList(TABLE_COLUMN_NAME))
-                .columns(Arrays.asList(Arrays.asList(TABLE_COLUMN_VALUE)))
+                .listItemType(ListItemType.TABLE)
+                .tableHeads(List.of(TableHeadModel.builder()
+                    .columnIndex(0)
+                    .content(TABLE_COLUMN_NAME)
+                    .build()))
+                .rows(List.of(TableRowModel.builder()
+                    .rowIndex(0)
+                    .columns(List.of(TableColumnModel.builder()
+                        .columnIndex(0)
+                        .columnType(ColumnType.TEXT)
+                        .data(TABLE_COLUMN_VALUE)
+                        .build()))
+                    .build()))
                 .build()
         );
 
-        NotebookActions.createChecklistTable(
+        TableActions.createTable(
             accessTokenId,
-            CreateChecklistTableRequest.builder()
+            CreateTableRequest.builder()
                 .title(CHECKLIST_TABLE_TITLE)
-                .columnNames(Arrays.asList(CHECKLIST_TABLE_COLUMN_NAME))
-                .rows(Arrays.asList(ChecklistTableRowRequest.<String>builder()
+                .listItemType(ListItemType.CHECKLIST_TABLE)
+                .tableHeads(List.of(TableHeadModel.builder()
+                    .columnIndex(0)
+                    .content(CHECKLIST_TABLE_COLUMN_NAME)
+                    .build()))
+                .rows(List.of(TableRowModel.builder()
+                    .rowIndex(0)
                     .checked(true)
-                    .columns(Arrays.asList(CHECKLIST_TABLE_COLUMN_VALUE))
+                    .columns(List.of(TableColumnModel.builder()
+                        .columnIndex(0)
+                        .columnType(ColumnType.TEXT)
+                        .data(CHECKLIST_TABLE_COLUMN_VALUE)
+                        .build()))
                     .build()))
                 .build()
         );
@@ -98,7 +125,7 @@ public class SearchListItemTest extends BackEndTest {
     }
 
     private static void searchTextTooShort(UUID accessTokenId) {
-        Response response = NotebookActions.getSearchResponse(accessTokenId, "as");
+        Response response = ListItemActions.getSearchResponse(accessTokenId, "as");
         ResponseValidator.verifyInvalidParam(response, "search", "too short");
     }
 
@@ -107,15 +134,15 @@ public class SearchListItemTest extends BackEndTest {
         RegistrationParameters userData = RegistrationParameters.validParameters();
         UUID accessTokenId = IndexPageActions.registerAndLogin(userData);
 
-        NotebookActions.createLink(accessTokenId, CreateLinkRequest.builder().title(LINK_TITLE).url(LINK_TITLE).build());
+        LinkActions.createLink(accessTokenId, CreateLinkRequest.builder().title(LINK_TITLE).url(LINK_TITLE).build());
 
-        List<NotebookView> searchResult = NotebookActions.search(accessTokenId, LINK_TITLE);
+        List<NotebookView> searchResult = ListItemActions.search(accessTokenId, LINK_TITLE);
 
         assertThat(searchResult).hasSize(1);
     }
 
     private void search(UUID accessTokenId, String search, String listItemTitle, ListItemType type) {
-        List<NotebookView> searchResult = NotebookActions.search(accessTokenId, search);
+        List<NotebookView> searchResult = ListItemActions.search(accessTokenId, search);
 
         NotebookView expected = searchResult.stream()
             .filter(notebookView -> notebookView.getTitle().equals(listItemTitle))
